Update photos and include OB in bio

--- a/src/content/page-partials/bio.mdx
+++ b/src/content/page-partials/bio.mdx
@@ -4,6 +4,9 @@ image:
   alt: Bradley smiling, sitting in front of a 5-manual organ
 ---
 
+import YouTubeEmbed from "../../components/YouTubeEmbed";
+import FancyHR from "../../components/FancyHR";
+
 ## Biography.
 
 Praised for his “virtuoso piano playing” and his ability to leave audiences
@@ -37,6 +40,18 @@ Having served as Director of Music & Organist at St. Mark’s Episcopal Church
 CT), Organ Scholar at Yale Divinity School’s Marquand Chapel, and Associate
 Director of Music and Worship Arts at Edenton Street United Methodist Church
 (Raleigh, NC), Bradley currently serves as Lay Associate for Music,
-Communications and Administration at Church of the Nativity in Raleigh, NC. He
-is also a faculty member of North Carolina Chamber Music Institute, and
-maintains a studio of private students.
+Communications and Administration at Church of the Nativity, and assistant
+organist at Holy Name of Jesus Cathedral in Raleigh, NC. He is also a faculty
+member of North Carolina Chamber Music Institute, and maintains a studio of
+private students.
+
+<FancyHR />
+
+### The Orgelbüchlein Project
+
+Bradley is currently fundraising towards his first studio album: the complete
+Orgelbüchlein of J. S. Bach. You can learn more about the project — and make a
+contribution — on the [Indiegogo
+page](https://www.indiegogo.com/projects/bradley-burgess-the-orgelbuchlein#/).
+
+<YouTubeEmbed src="https://www.youtube.com/embed/miwISYDcnRk?si=KHNd25q9kisp9QOH" />
