Make YouTubeEmbed component use inView

--- a/src/content/page-partials/bio.mdx
+++ b/src/content/page-partials/bio.mdx
@@ -54,4 +54,8 @@ Orgelbüchlein of J. S. Bach. You can learn more about the project — and make 
 contribution — on the [Indiegogo
 page](https://www.indiegogo.com/projects/bradley-burgess-the-orgelbuchlein#/).
 
-<YouTubeEmbed src="https://www.youtube.com/embed/miwISYDcnRk?si=KHNd25q9kisp9QOH" />
+<YouTubeEmbed
+  src="https://www.youtube.com/embed/miwISYDcnRk?si=KHNd25q9kisp9QOH"
+  client:idle
+  client:only="preact"
+/>
